[package]
name = "egui_wings_example"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
egui = { workspace = true, features = [ "default_fonts" ] }
egui-wgpu.workspace = true
egui_wings.workspace = true
egui_wings_host.workspace = true
egui-winit.workspace = true
example_host.workspace = true
geese.workspace = true
pollster.workspace = true
raw-window-handle.workspace = true
js_wasm_runtime_layer = "0.4.0"
log = "0.4"
wings.workspace = true
wings_host.workspace = true
winit.workspace = true
wgpu = { version = "*", features = ["webgpu"] }

console_error_panic_hook = "0.1"
console_log = "0.2"
web-sys = {version = "0.3", features = ['DragEvent','DataTransfer', 'DataTransferItem','Event','File','FileList','DataTransferItemList', "Document",
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Storage',
  'Response',
    "Window",
    "EventTarget",
    "Element",
    "Location"] }
wasm-bindgen = "0.2.93"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
poll-promise = {version = "0.3", features = ["web"]}